[package]
name = "wallocate-nostd"
version = "0.1.0"
authors = ["kritzcreek <christoph.hegemann1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
